[tool.poetry]
name = "Yet Another Chat App"
version = "0.1.0"
description = ""
authors = ["Hernán Ciudad <hciudad@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = {extras = ["websockets"], version = "^0.13.4"}
fastapi = "^0.63.0"
websockets = "^8.1"
redis = "^3.5.3"
aiofiles = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
